cto/examples/invalid/reference.cto
namespace org.sample.invalid

asset Foo identified by id {
  o String id optional default = "0815"
}